<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/tv_date"
        style="@style/TextViewContentStyle"
        android:text="@string/date" />

    <TextView
        android:id="@+id/tv_temperature"
        style="@style/TextViewContentStyle"
        android:text="@string/average_temperature" />

    <TextView
        android:id="@+id/tv_pressure"
        style="@style/TextViewContentStyle"
        android:text="@string/pressure" />

    <TextView
        android:id="@+id/tv_humidity"
        style="@style/TextViewContentStyle"
        android:text="@string/humidity" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/TextViewContentStyle"
        android:text="@string/description" />

</LinearLayout>